--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "grunt"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -30,10 +31,7 @@
     "jasmine-node": "^1.14.5",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.10",
-    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.2",
     "protractor": "^2.0.0"
   }
 }
