--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "0.12"
 before_script:
-  - 'npm install'
   - 'bower install'
-  - 'node_modules/protractor/bin/webdriver-manager update --standalone --chrome'
+  - 'node_modules/protractor/bin/webdriver-manager update --standalone'
+  - 'npm install grunt'
+  - 'npm install grunt-cli'
+  - 'grunt'
