--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 before_script:
   - 'bower install'
   - 'node_modules/protractor/bin/webdriver-manager update --standalone'
-  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &" - sleep 5'
+  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &' - sleep 5
   - 'npm install grunt'
   - 'npm install grunt-cli'
   - 'npm install grunt-protractor-webdriver'
