--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: node_js
 node_js:
   - "0.12"
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"  
 before_script:
-  - 'bower install'
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start" 
   - 'node_modules/protractor/bin/webdriver-manager update --standalone'
-  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &' - sleep 5
+  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'  
+  - sleep 3
+  - 'bower install'
   - 'npm install grunt'
   - 'npm install grunt-cli'
   - 'npm install grunt-protractor-webdriver'
