--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start" 
-  - 'node_modules/protractor/bin/webdriver-manager update --standalone'
+  - 'node_modules/protractor/bin/webdriver-manager update --standalone --firefox'
   - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'  
   - sleep 3
   - 'bower install'
