--- a/bower.json
+++ b/bower.json
@@ -17,11 +17,11 @@
     "jquery": "~2.1.4",
     "angular": "~1.3.15",
     "angular-resource": "~1.3.15",
+    "angular-route": "~1.3.15",
     "modernizr": "~2.8.3",
     "normalize": "~1.0.4"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.15",
-    "angular-route": "~1.3.15"
+    "angular-mocks": "~1.3.15"
   }
 }
