--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "grunt"
+    "test": "grunt travis"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
