--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-resource": "~1.3.15",
     "angular-route": "~1.3.15",
     "modernizr": "~2.8.3",
-    "normalize": "~1.0.4"
+    "normalize": "~1.0.4",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.15"
