--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-route": "~1.3.15",
     "modernizr": "~2.8.3",
     "normalize": "~1.0.4",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "angular-messages": "~1.3.15"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.15"
