--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "bower": "^1.4.1",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
@@ -27,6 +28,7 @@
     "grunt-express-server": "^0.5.1",
     "grunt-nodemon": "^0.4.0",
     "grunt-protractor-runner": "^2.0.0",
+    "grunt-protractor-webdriver": "^0.2.0",
     "grunt-sass": "^1.0.0",
     "jasmine-core": "^2.3.3",
     "jasmine-node": "^1.14.5",
